Fixed text clipping on main page for mobile (hopefully!)

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -136,7 +136,7 @@ button:focus-visible {
   width: 100%;
   max-width: 650px;
   margin: 0 auto;
-  text-align: center;
+  text-align: left;
   padding: 0 20px;
 }
 
